tests/ui/borrowck/issue-83309-ice-immut-in-for-loop.stderr
error[E0594]: cannot assign to `*v`, which is behind a `&` reference
  --> $DIR/issue-83309-ice-immut-in-for-loop.rs:11:9
   |
LL |     for v in Query.iter_mut() {
   |              ---------------- this iterator yields `&` references
LL |
LL |         *v -= 1;
   |         ^^^^^^^ `v` is a `&` reference, so the data it refers to cannot be written

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0594`.
